--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,27 @@
-/*  your css code here. If applicable */
+table,tr,td
+{
+	border:1px solid black;
+	width:500px;
+}
+table.tab2
+{
+	margin-top:50px;
+	height:110px;
+}
+td.right
+{
+	text-align:right;
+}td.center
+{
+	text-align:center;
+}
+table.tab3
+{
+	border:1px solid blak;
+	margin-top:40px;
+	height:50px;
+}
+td.b
+{
+	height:100px;
+}
