--- a/styles.css
+++ b/styles.css
@@ -19,9 +19,20 @@ table.tab3
 {
 	border:1px solid blak;
 	margin-top:40px;
-	height:50px;
 }
-td.b
+td.c
 {
-	height:100px;
+	height:10px;
+	background-color:blue;
 }
+td.d
+{
+		height:10px;
+	background-color:green;
+}
+td.g
+{
+	width:30px;
+}
+
+
