--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,10 @@
-table.middle tr,td
+table, tr,td
 {
 	border:1px solid black;
 	width:500px;
 	border-spacing:1px;
 }
-table.middle
+table
 {
 	margin-top:50px;
 	height:100px;
